update meta tag

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <meta property="og:url" content="https://websitemun.github.io/pham-yen-land/" />
     <meta property="og:title" content="Thành công = Thiện tâm + Hợp tác" />
     <meta property="og:description" content="Phạm Yến Land - Chuyên bất động sản & Đầu tư tại Nha Trang, Khánh Hòa. Uy tín và Tận tâm." />
-    
+    <meta name="description" content="Phạm Yến Land chuyên mua bán, ký gửi bất động sản, đất nền, nhà phố tại Nha Trang, Khánh Hòa. Uy tín - Tận Tâm - Hợp tác thành công." />
+    <meta name="keywords" content="Bất động sản Nha Trang, Phạm Yến Land, Đất nền Khánh Hòa, Mua bán nhà đất Nha Trang" />
     <meta property="og:image" content="https://websitemun.github.io/pham-yen-land/image_66a62e.jpg" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="800" />
+    <meta name="google-site-verification" content="cx8yXwY3ScjT5jj7qJOgm7Cz5znC16b6uDQWAERPsJU" />
 
     <style>
         /* --- CÀI ĐẶT CƠ BẢN --- */
@@ -634,6 +636,7 @@
     </script>
 </body>
 </html>
+
 
 
 
